index_data/styles.css
@import url('https://fonts.googleapis.com/css2?family=Abel&display=swap');
/* font-family: 'Abel', sans-serif; */

/* HTML BODY * */
html {
    scroll-behavior: smooth;
    font-size: 20px;
}

@media (max-width: 400px) {
    html {
        font-size: 10px;
    }
}

@media (min-width: 400px) and (max-width: 768px) {
    html {
        font-size: 14px;
    }
}

@media (min-width: 768px) and (max-width: 1200px) {
    html {
        font-size: 16px;
    }
}

@media (max-height: 400px) {
    html {
        font-size: 10px;
    }
}

@media (min-height: 400px) and (max-height: 600px) {
    html {
        font-size: 14px;
    }
}

* {
    margin: 0;
    padding: 0;
}

*::selection {
    background: rgba(84, 84, 84, 0.5);
    color: white;
}

body {
    background: #fff;
    min-width: 300px;

    font-family: 'Abel', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    color: rgb(255, 255, 255);
    line-height: 1.75rem;
}

#afterload{
    opacity: 0;
    animation: fadeIn 1s ease forwards;
}

.circle.large,
.circle_large_border{
    opacity: 0;
    animation: fadeIn 2.5s ease forwards;
}


/* A  */

.animatedlink {
    position: relative;
    display: inline-block;
    white-space: nowrap;

    color: rgb(255, 188, 244);
    background: none;
    text-decoration: none;
}

.animatedlink::before {
    content: '';
    position: absolute;
    width: 100%;
    height: 2px;
    background-color: rgb(255, 213, 98);
    bottom: -3px;
    left: 0;
    transform-origin: right;
    transform: scaleX(0);
    transition: transform 1.6s ease;
}

.animatedlink:hover::before {
    transform-origin: right;
    transform: scaleX(1);
}

.animatedlink::after {
    position: absolute;
    content: '';
    bottom: -3px;
    left: 0;
    width: 0;
    height: 2px;

    background: rgb(255, 213, 98);
    transition: width 1.6s ease;
}

.animatedlink:hover::after {
    width: 100%;
}

.animatedlink:hover {
    color: rgb(255, 180, 40);
}

.animatedlink:active {
    color: rgb(255, 213, 98);
}

nav ul li a {
    color: white;
    text-decoration: none;
}

footer a {
    color: rgb(0, 0, 0);
    box-shadow: none;

    display: inline-block;
    text-decoration: none;
    font-weight: bold;
    transition: transform 0.8s ease;
}

.l_content a {
    padding: 0 1rem;

    font-size: 1rem;
    color: rgb(153, 153, 153);
    text-decoration: none;
}


/* H1 H2 P*/

h1,
h2 {
    font-weight: normal;
    letter-spacing: .1rem;
    word-spacing: .1rem;
    padding-bottom: 1rem;
}

p {
    padding-bottom: 1rem;
}

/* NAV */

nav {
    position: absolute;
    left: 1rem;
    padding: 1rem;
    display: flex;

    font-size: 2rem;
    text-decoration: 2px white line-through;
    mix-blend-mode: exclusion;
    z-index: 6;
}

nav>* {
    padding-right: 1rem;
}

nav ul {
    list-style: none;
    display: none;
}

nav ul>li {
    padding: 0 1rem .5rem 0;
}

nav:hover ul {
    display: flex;
    flex-wrap: wrap;
    animation: fadeIn .5s forwards;
}

/* HEADER */

nav{
    opacity: 0;
    animation: fadeIn 1s ease-in-out 2s forwards, moveUp 1s ease 2s forwards; 
}

.header {
    position: relative;
    width: 100%;
    height: 100vh;
    margin: 0 auto;
    overflow-X: hidden;

    /* background-image: url(images/header_ink.gif);
    background-size: cover;
    background-position: top;
    background-repeat: no-repeat; */
}

.header_description {
    position: absolute;
    left: 2rem;
    bottom: 2rem;
    font-size: 4rem;
    line-height: 1em;
    z-index: 6;

    background: 50% 100% / 50% 50% no-repeat radial-gradient(ellipse at bottom, #fff, transparent, transparent);
    -webkit-background-clip: text;
    background-clip: text;
    color: transparent;
    animation: reveal 3000ms ease-in-out forwards 200ms;
}

@media (max-width: 600px) {
    .header_description {
        font-size: 2.5rem;
    }
}

/* OLD VERSION */

/* .header {
    position: relative;
    width: 100%;
    height: 100vh;
    margin: 0 auto;
    overflow-X: hidden;

    background-image: url(images/header_ink.gif);
    background-size: cover;
    background-position: top;
    background-repeat: no-repeat;
}

.header_name {
    position: absolute;
    top: 14%;
    left: 45%;
    transform: translate(-50%, 50%);

    line-height: 5.5rem;
    text-align: right;
    color: #fcfcff;
    font-size: 2.2rem;
}

.header_role {
    position: absolute;
    right: 5%;
    bottom: 5%;

    font-size: 2rem;
    mix-blend-mode: exclusion;
}

.header_blue_mask {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    pointer-events: none;
    background: rgba(4, 4, 230, 0.04);
    z-index: 2;
}

@media (max-width: 400px) {
    .header_name {
        top: 25%;
    }

    .header_role {
        bottom: 10%;
    }
}

@media (min-width: 400px) and (max-width: 1200px) {
    .header_role {
        bottom: 7%;
    }
} */


/* CIRCLES */

.header_image {
    position: relative;
    width: 100vw;
    height: 100vh;
    overflow: hidden;
}

.circle {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.circle img {
    user-select: none;
    pointer-events: none;
}

.circle.backgr,
.circle.large,
.circle.small {
    width: 100vw;
    height: 100vh;
    overflow: hidden;
}

.circle.backgr,
.circle.small {
    background-image: url(images/header_image.jpg);
    background-size: cover;
    background-position: top right;
}

.circle.small {
    clip-path: circle(12vw at 50% 50%);
    opacity: 1;
    z-index: 5;
}

.circle.large {
    clip-path: circle(20vw at 50% 50%);
    z-index: 3;
    position: relative;

    background-image: url(images/header_img_cut.jpg);
    background-size: cover;
    background-position: top right;
}
/* ... */

